--- a/attendant.html
+++ b/attendant.html
@@ -10,8 +10,8 @@
 <div class="login-box">
 	<div class="center">
 		<img src="images/profile.png" alt="Profile">
-		<h1><a href="index.html" id="active-links">Administrator</a> ,
-		 <a href="attendant.html">Store attendant</a> </h1>
+		<h1><a href="index.html">Administrator</a> ,
+		 <a href="attendant.html" id="active-links">Store attendant</a> </h1>
 		<form>
 			<input type="email" placeholder="Enter Your Email">
 			<input type="password" placeholder="Enter Your Password"><br>
