:new: [Feature #161041218] Add navigation bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="dark-bg">
-<!--navigation-->
+<!--Login box-->
 <div class="login-box">
 	<div class="center">
 		<img src="images/profile.png" alt="Profile">
@@ -19,6 +19,6 @@
 		</form>
 	</div>
 </div>
-<!--end of navigation-->
+<!--end of Login Box-->
 </body>
 </html>
