:new: [Feature #161041288] Add View all product page

--- a/attendant/index.html
+++ b/attendant/index.html
@@ -10,14 +10,121 @@
 <div class="container">
 	<div class="nav">
 		<ul>
-			<li id="logo">Store Manager</li>
-			<li><a href=""  class="active-nav">Shopping Cart</a></li>
-			<li><a href="">View Products</a></li>
+			<li id="logo"><span class="fa fa-money"></span> 
+			<span class="logo-text">STORE</span> MANAGER</li>
+			<li><a href=""  class="active-nav">View Products</a></li>
+			<li><a href="">Shopping Cart</a></li>
 			<li><a href="">My sales</a></li>
 			<li><a href="">Profile</a></li>
 		</ul>
 	</div>
 </div>
 <!--end of navigation-->
+
+<!--category-->
+<div class="container margin-top-20">
+	<div class="category center">
+		<form>
+			<select>
+				<option>All</option>
+				<option>Category 1</option>
+				<option>Category 2</option>
+				<option>Category 3</option>
+			</select>
+		</form>
+	</div>
+</div>
+<!--end of category-->
+
+<!--list of products-->
+<div class="container">
+	<div class="table-product margin-top-20">
+		<table>
+			<tr>
+				<th colspan="5" id="product-title">Product Category : All</th>
+			</tr>
+			<tr id="hover-body">
+				<th>Name of Product</th>
+				<th>Inventory Quantity</th>
+				<th>Minimum Inventory Quantity</th>
+				<th>Item Price</th>
+				<th>Edit category</th>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<button class="btn-category">Add category</button>
+				</td>
+			</tr>
+		</table>
+	</div>
+</div>
+<!--end of list of products-->
 </body>
 </html>
