:new: [Feature ##161041218] Add a shopping cart page

--- a/attendant/index.html
+++ b/attendant/index.html
@@ -5,17 +5,17 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body class="white-bg">
 <!--navigation-->
 <div class="container">
 	<div class="nav">
 		<ul>
 			<li id="logo"><span class="fa fa-money"></span> 
 			<span class="logo-text">STORE</span> MANAGER</li>
-			<li><a href=""  class="active-nav">View Products</a></li>
-			<li><a href="">Shopping Cart</a></li>
-			<li><a href="">My sales</a></li>
-			<li><a href="">Profile</a></li>
+			<li><a href="index.html"  class="active-nav">View Products</a></li>
+			<li><a href="cart.html">Shopping Cart</a></li>
+			<li><a href="sales.html">My sales</a></li>
+			<li><a href="profile.html">Profile</a></li>
 		</ul>
 	</div>
 </div>
@@ -56,7 +56,25 @@
 				<td>100</td>
 				<td>50ksh</td>
 				<td>
-					<button class="btn-category">Add category</button>
+					<span class="fa fa-check-circle"> Added</span>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<span class="fa fa-check-circle"> Added</span>
+				</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>300</td>
+				<td>100</td>
+				<td>50ksh</td>
+				<td>
+					<span class="fa fa-check-circle"> Added</span>
 				</td>
 			</tr>
 			<tr>
@@ -74,25 +92,7 @@
 				<td>100</td>
 				<td>50ksh</td>
 				<td>
-					<button class="btn-category">Add category</button>
-				</td>
-			</tr>
-			<tr>
-				<td>KIWI</td>
-				<td>300</td>
-				<td>100</td>
-				<td>50ksh</td>
-				<td>
-					<button class="btn-category">Add category</button>
-				</td>
-			</tr>
-			<tr>
-				<td>KIWI</td>
-				<td>300</td>
-				<td>100</td>
-				<td>50ksh</td>
-				<td>
-					<button class="btn-category">Add category</button>
+					<span class="fa fa-check-circle"> Added</span>
 				</td>
 			</tr>
 			<tr>
