:new: Move profile info to my sales

--- a/attendant/sales.html
+++ b/attendant/sales.html
@@ -16,7 +16,6 @@
 			<li><a href="index.html">View Products</a></li>
 			<li><a href="cart.html">Shopping Cart</a></li>
 			<li><a href="sales.html"  class="active-nav">My sales</a></li>
-			<li><a href="profile.html">Profile</a></li>
 		</ul>
 	</div>
 </div>
@@ -85,6 +84,23 @@
 	</div>
 </div>
 <!--end of list of products-->
+
+<!--sales boxes-->
+<div class="container center margin-top-20">
+	<div class="sales-box">
+		<h1>Total goods sold</h1>
+		<h2>300</h2>
+	</div>
+	<div class="sales-box">
+		<h1>Total Worth</h1>
+		<h2>3000 ksh</h2>
+	</div>
+	<div class="sales-box">
+		<h1>Total Sales record</h1>
+		<h2>3000 ksh</h2>
+	</div>
+</div>
+<!--end of sales boxes-->
 
 </body>
 </html>
