--- a/attendant/cart.html
+++ b/attendant/cart.html
@@ -15,7 +15,8 @@
 			<span class="logo-text">STORE</span> MANAGER</li>
 			<li><a href="index.html">View Products</a></li>
 			<li><a href="cart.html"  class="active-nav">Shopping Cart</a></li>
-			<li><a href="sales.html">My sales</a></li>
+			<li><a href="profile.html">Profile</a></li>
+			<li><a href="myinfo.html">My Info</a></li>
 		</ul>
 	</div>
 </div>
