--- a/attendant/profile.html
+++ b/attendant/profile.html
@@ -15,12 +15,76 @@
 			<span class="logo-text">STORE</span> MANAGER</li>
 			<li><a href="index.html">View Products</a></li>
 			<li><a href="cart.html">Shopping Cart</a></li>
-			<li><a href="sales.html">My sales</a></li>
-			<li><a href="profile.html"  class="active-nav">Profile</a></li>
+			<li><a href="profile.html" class="active-nav">Profile</a></li>
+			<li><a href="myinfo.html">My Info</a></li>
 		</ul>
 	</div>
 </div>
 <!--end of navigation-->
+
+<!--list of products-->
+<div class="container">
+	<div class="table-product margin-top-20">
+		<table>
+			<tr>
+				<th colspan="5" id="product-title">My Sales List</th>
+			</tr>
+			<tr id="hover-body">
+				<th>Name of Product</th>
+				<th>Date sold</th>
+				<th>Quantity sold</th>
+				<th>Item Price</th>
+				<th>sub total</th>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>2/2/2018</td>
+				<td>10</td>
+				<td>50 ksh</td>
+				<td> 500 ksh</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>2/2/2018</td>
+				<td>10</td>
+				<td>50 ksh</td>
+				<td> 500 ksh</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>2/2/2018</td>
+				<td>10</td>
+				<td>50 ksh</td>
+				<td> 500 ksh</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>2/2/2018</td>
+				<td>10</td>
+				<td>50 ksh</td>
+				<td> 500 ksh</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>2/2/2018</td>
+				<td>10</td>
+				<td>50 ksh</td>
+				<td> 500 ksh</td>
+			</tr>
+			<tr>
+				<td>KIWI</td>
+				<td>2/2/2018</td>
+				<td>10</td>
+				<td>50 ksh</td>
+				<td> 500 ksh</td>
+			</tr>
+
+			
+			</tr>
+		</table>
+	</div>
+</div>
+<!--end of list of products-->
 
 <!--sales boxes-->
 <div class="container center margin-top-20">
@@ -38,7 +102,6 @@
 	</div>
 </div>
 <!--end of sales boxes-->
-
 
 </body>
 </html>
