--- a/attendant/confirm.html
+++ b/attendant/confirm.html
@@ -107,43 +107,18 @@
 
 	</div>
 	<div class="container-right">
+
 		<!--cart list-->
-	<div class="cart-box level-cart">
+	<div class="cart-box">
 		<div class="table-product  margin-top-20">
 		<h1>My Cart</h1>
-		<table>
-			<tr>
-				<th colspan="5" id="product-title">TOTAL COST: 2000ksh</th>
-			</tr>
-			<tr id="hover-body">
-				<th>Name of Product</th>
-				<th>Item Price</th>
-				<th>quantity</th>
-				<th>sub total</th>
-				<th></th>
-			</tr>
-			<tr>
-				<td>Kiwi</td>
-				<td>50 ksh</td>
-				<td>3</td>
-				<td>150</td>
-				<td><button class="btn-remove">Remove</button></td>
-			</tr>
-			<tr>
-				<td>Kiwi</td>
-				<td>50 ksh</td>
-				<td>3</td>
-				<td>150</td>
-				<td><button class="btn-remove">Remove</button></td>
-			</tr>
-			<tr>
-				<th colspan="5" id="product-end">
-				<button class="btn-danger">CLEAR CART</button>
-				</th>
-			</tr>
-		</table>
+		<br>
+		<div class="confirm center">
+			<h1>Do you want to remove item?</h1>
+			<button>OK</button><button>Cancel</button>
+		</div>
+		</div>
 	</div>
-</div>
 <!--end of cart list-->
 	</div>
 </div>
