:bug: [Feature #161041218] Add a checkout button

--- a/attendant/cart.html
+++ b/attendant/cart.html
@@ -138,7 +138,8 @@
 			</tr>
 			<tr>
 				<th colspan="5" id="product-end">
-				<button class="btn-danger">CLEAR CART</button>
+				<button class="btn-danger">CHECKOUT</button>
+				<button class="btn-ok">CLEAR CART</button>
 				</th>
 			</tr>
 		</table>
