--- a/attendant/index.html
+++ b/attendant/index.html
@@ -42,16 +42,19 @@
 	<div class="table-product margin-top-20">
 		<table>
 			<tr>
-				<th colspan="5" id="product-title">Product Category : All</th>
+				<th colspan="7" id="product-title">Product Category : All</th>
 			</tr>
 			<tr id="hover-body">
+				<th>Product ID</th>
 				<th>Name of Product</th>
 				<th>Inventory Quantity</th>
 				<th>Minimum Inventory Quantity</th>
 				<th>Item Price</th>
 				<th>Edit category</th>
+				<th></th>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -59,8 +62,12 @@
 				<td>
 					<span class="fa fa-check-circle"> Added</span>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -68,8 +75,12 @@
 				<td>
 					<span class="fa fa-check-circle"> Added</span>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -77,8 +88,12 @@
 				<td>
 					<span class="fa fa-check-circle"> Added</span>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -86,8 +101,12 @@
 				<td>
 					<button class="btn-category">Add category</button>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -95,8 +114,12 @@
 				<td>
 					<span class="fa fa-check-circle"> Added</span>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -104,8 +127,12 @@
 				<td>
 					<button class="btn-category">Add category</button>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
@@ -113,14 +140,21 @@
 				<td>
 					<button class="btn-category">Add category</button>
 				</td>
+				<td>
+					<button class="btn-category">image</button>
+				</td>
 			</tr>
 			<tr>
+				<td>12344</td>
 				<td>KIWI</td>
 				<td>300</td>
 				<td>100</td>
 				<td>50ksh</td>
 				<td>
 					<button class="btn-category">Add category</button>
+				</td>
+				<td>
+					<button class="btn-category">image</button>
 				</td>
 			</tr>
 		</table>
