:new: [Feature #161041563] Page to add store attendant

--- a/admin/index.html
+++ b/admin/index.html
@@ -14,6 +14,7 @@
 			<li id="logo"><span class="fa fa-money"></span> 
 			<span class="logo-text">STORE</span> MANAGER</li>
 			<li><a href="index.html"  class="active-nav">Store attendant</a></li>
+			<li><a href="new-attendant.html">Store attendant</a></li>
 		</ul>
 	</div>
 </div>
