--- a/admin/editproduct.html
+++ b/admin/editproduct.html
@@ -13,10 +13,10 @@
 		<ul>
 			<li id="logo"><span class="fa fa-money"></span> 
 			<span class="logo-text">STORE</span> MANAGER</li>
-			<li><a href="index.html"  class="active-nav">Edit Store attendant</a></li>
+			<li><a href="index.html">Edit Store attendant</a></li>
 			<li><a href="new-attendant.html">Add Store attendant</a></li>
 			<li><a href="new-product.html">Add Products</a></li>
-			<li><a href="edit-product.html">Edit Product</a></li>
+			<li><a href="edit-product.html"  class="active-nav">Edit Product</a></li>
 		</ul>
 	</div>
 </div>
@@ -24,7 +24,7 @@
 
 <!--my info title-->
 <div class="container center">
-	<h1>Edit [Joh Doe]</h1>
+	<h1>Edit Product</h1>
 </div>
 <!--end of my info title-->
 
@@ -32,58 +32,35 @@
 <div class="container center margin-top-40">
 	<div class="row">
 		<div class="sales-box edit-info">
-			<h1>First Name</h1>
-			<h2>John</h2>
-			<input type="text" value="john">
+			<h1>Product Name</h1>
+			<h2>Omo</h2>
+			<input type="text" value="omo">
 		</div>
 		<div class="sales-box edit-info">
-			<h1>Last Name</h1>
-			<h2>Doe</h2>
-			<input type="text" value="Doe">
+			<h1>Inventory Quantity</h1>
+			<h2>50000</h2>
+			<input type="text" value="5000">
 		</div>
 		<div class="sales-box edit-info">
-			<h1>Email</h1>
-			<h2>JohnDoe@gmail.com</h2>
-			<input type="text" value="JohnDoe@gmail.com">
+			<h1>M.I.Q</h1>
+			<h2>6500</h2>
+			<input type="text" value="6500">
 		</div>
 	</div>
 
 	<div class="row margin-top-40">
 		<div class="sales-box edit-info">
-			<h1>Role</h1>
+			<h1>Category</h1>
 			<h2>Store Attendant</h2>
 			<select>
-				<option>Admin</option>
-				<option>Store Attendant</option>
+				<option>Some categoryn</option>
+				<option>some category</option>
 			</select>
 		</div>
 		<div class="sales-box edit-info">
-			<h1>Date of Birth</h1>
-			<h2>2-2-1998</h2>
-			<input type="text" value="2-2-1998">
-		</div>
-		<div class="sales-box edit-info">
-			<h1>Department</h1>
-			<h2>Electronics</h2>
-			<input type="text" value="Electronics">
-		</div>
-	</div>
-
-	<div class="row margin-top-40">
-		<div class="sales-box edit-info">
-			<h1>Telephone Number</h1>
-			<h2>07123456789</h2>
-			<input type="text" value="07123456789">
-		</div>
-		<div class="sales-box edit-info">
-			<h1>Date of Employment</h1>
-			<h2>2-2-1998</h2>
-			<input type="text" value="2-2-1998">
-		</div>
-		<div class="sales-box edit-info">
-			<h1>Gender</h1>
-			<h2>Male</h2>
-			<input type="text" value="Male">
+			<h1>Item Price</h1>
+			<h2>100</h2>
+			<input type="text" value="100">
 		</div>
 	</div>
 </div>
