--- a/admin/index.html
+++ b/admin/index.html
@@ -13,8 +13,10 @@
 		<ul>
 			<li id="logo"><span class="fa fa-money"></span> 
 			<span class="logo-text">STORE</span> MANAGER</li>
-			<li><a href="index.html"  class="active-nav">Store attendant</a></li>
-			<li><a href="new-attendant.html">Store attendant</a></li>
+			<li><a href="index.html"   class="active-nav">Edit Store attendant</a></li>
+			<li><a href="new-attendant.html">Add Store attendant</a></li>
+			<li><a href="new-product.html">Add Products</a></li>
+			<li><a href="edit-product.html">Edit Product</a></li>
 		</ul>
 	</div>
 </div>
