--- a/admin/new-product.html
+++ b/admin/new-product.html
@@ -14,8 +14,8 @@
 			<li id="logo"><span class="fa fa-money"></span> 
 			<span class="logo-text">STORE</span> MANAGER</li>
 			<li><a href="index.html">Edit Store attendant</a></li>
-			<li><a href="new-attendant.html"  class="active-nav">Add Store attendant</a></li>
-			<li><a href="new-product.html">Add Products</a></li>
+			<li><a href="new-attendant.html">Add Store attendant</a></li>
+			<li><a href="new-product.html"  class="active-nav">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 		</ul>
 	</div>
@@ -24,24 +24,20 @@
 
 <!--new title-->
 <div class="container center">
-	<h1>Add Store Attendant</h1>
+	<h1>Add Products</h1>
 
 	<div class="attendant-form">
 		<form>
-			<input type="text" name="" placeholder="First Name"><br>
-			<input type="text" name="" placeholder="Last Name">
-			<input type="text" name="" placeholder="Email"><br>
-			<input type="text" name="" placeholder="Telephone"><br>
+			<input type="text" name="" placeholder="Product Name"><br>
+			<input type="text" name="" placeholder="Inventory Quantity">
+			<input type="text" name="" placeholder="Minimum Inventory Quantity"><br>
+			<input type="text" name="" placeholder="Telephone Item Price"><br>
 			<select>
 				<option>List of Department</option>
 				<option>List of Department</option>
 				<option>List of Department</option>
-			</select><br>
-			<select>
-				<option>Gender : male</option>
-				<option>Gender : female</option>
 			</select><br><br>
-			<button type="submit" class="btn-main">Add Store Attendant</button>
+			<button type="submit" class="btn-main">Add Products</button>
 		</form>
 	</div>
 </div>
