:new: [Feature #161041583] Add categories 1 and 2

--- a/admin/editproduct.html
+++ b/admin/editproduct.html
@@ -53,8 +53,9 @@
 			<h1>Category</h1>
 			<h2>Store Attendant</h2>
 			<select>
-				<option>Some categoryn</option>
-				<option>some category</option>
+				<option>Category 1</option>
+				<option>Category 2</option>
+				<option>Category 3</option>
 			</select>
 		</div>
 		<div class="sales-box edit-info">
@@ -65,6 +66,5 @@
 	</div>
 </div>
 <!--end of my info-->
-
 </body>
 </html>
