:bug: [Chore #161153411] Fix broken links in admin account

--- a/admin/edit-product.html
+++ b/admin/edit-product.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
+	<script src="../js/admin-redirect.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -17,6 +18,7 @@
 			<li><a href="new-attendant.html">Add Store attendant</a></li>
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html"   class="active-nav">Edit Product</a></li>
+			<li><a href="category.html">Category</a></li>
 		</ul>
 	</div>
 </div>
@@ -55,7 +57,7 @@
 				<td>Soaps</td>
 				<td>100 ksh</td>
 				<td>
-					<button class="btn-edit">Edit</button>
+					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
 					<button class="btn-remove">Delete</button>
