--- a/admin/new-product.html
+++ b/admin/new-product.html
@@ -17,6 +17,7 @@
 			<li><a href="new-attendant.html">Add Store attendant</a></li>
 			<li><a href="new-product.html"  class="active-nav">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
+			<li><a href="category.html">Category</a></li>
 		</ul>
 	</div>
 </div>
@@ -31,11 +32,11 @@
 			<input type="text" name="" placeholder="Product Name"><br>
 			<input type="text" name="" placeholder="Inventory Quantity">
 			<input type="text" name="" placeholder="Minimum Inventory Quantity"><br>
-			<input type="text" name="" placeholder="Telephone Item Price"><br>
+			<input type="text" name="" placeholder="Item Price"><br>
 			<select>
-				<option>List of Department</option>
-				<option>List of Department</option>
-				<option>List of Department</option>
+				<option>List of category</option>
+				<option>List of category</option>
+				<option>List of category</option>
 			</select><br><br>
 			<button type="submit" class="btn-main">Add Products</button>
 		</form>
