--- a/admin/editrecord.html
+++ b/admin/editrecord.html
@@ -17,6 +17,7 @@
 			<li><a href="new-attendant.html">Add Store attendant</a></li>
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
+			<li><a href="category.html">Category</a></li>
 		</ul>
 	</div>
 </div>
