--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<img src="images/profile.png" alt="Profile">
 		<h1><a href="index.html" id="active-links">Administrator</a> ,
 		 <a href="attendant.html">Store attendant</a> </h1>
-		<form>
+		<form action="admin/index.html">
 			<input type="email" placeholder="Enter Your Email">
 			<input type="password" placeholder="Enter Your Password"><br>
 			<button class="btn-main" type="submit">SIGN IN</button>
