:arrow_upper_right: [Chore #161153411] Made add cart dynamic

--- a/admin/edit-product.html
+++ b/admin/edit-product.html
@@ -63,6 +63,81 @@
 					<button class="btn-remove">Delete</button>
 				</td>
 			</tr>
+
+			<tr>
+				<td>122</td>
+				<td>omo</td>
+				<td>5000</td>
+				<td>5000</td>
+				<td>Soaps</td>
+				<td>100 ksh</td>
+				<td>
+					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
+				</td>
+				<td>
+					<button class="btn-remove">Delete</button>
+				</td>
+			</tr>
+
+			<tr>
+				<td>122</td>
+				<td>omo</td>
+				<td>5000</td>
+				<td>5000</td>
+				<td>Soaps</td>
+				<td>100 ksh</td>
+				<td>
+					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
+				</td>
+				<td>
+					<button class="btn-remove">Delete</button>
+				</td>
+			</tr>
+
+			<tr>
+				<td>122</td>
+				<td>omo</td>
+				<td>5000</td>
+				<td>5000</td>
+				<td>Soaps</td>
+				<td>100 ksh</td>
+				<td>
+					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
+				</td>
+				<td>
+					<button class="btn-remove">Delete</button>
+				</td>
+			</tr>
+
+			<tr>
+				<td>122</td>
+				<td>omo</td>
+				<td>5000</td>
+				<td>5000</td>
+				<td>Soaps</td>
+				<td>100 ksh</td>
+				<td>
+					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
+				</td>
+				<td>
+					<button class="btn-remove">Delete</button>
+				</td>
+			</tr>
+
+			<tr>
+				<td>122</td>
+				<td>omo</td>
+				<td>5000</td>
+				<td>5000</td>
+				<td>Soaps</td>
+				<td>100 ksh</td>
+				<td>
+					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
+				</td>
+				<td>
+					<button class="btn-remove">Delete</button>
+				</td>
+			</tr>
 			
 		</table>
 	</div>
