--- a/admin/editrecord.html
+++ b/admin/editrecord.html
@@ -84,7 +84,10 @@
 		<div class="sales-box edit-info">
 			<h1>Gender</h1>
 			<h2>Male</h2>
-			<input type="text" value="Male">
+			<select>
+				<option>Male</option>
+				<option>Female</option>
+			</select>
 		</div>
 	</div>
 </div>
