--- a/attendant/cart.html
+++ b/attendant/cart.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
+	<script src="../js/shopping-cart.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -127,19 +128,19 @@
 				<td>50 ksh</td>
 				<td>3</td>
 				<td>150</td>
-				<td><button class="btn-remove">Remove</button></td>
+				<td><button class="btn-remove" onclick="removeItem()">Remove</button></td>
 			</tr>
 			<tr>
 				<td>Kiwi</td>
 				<td>50 ksh</td>
 				<td>3</td>
 				<td>150</td>
-				<td><button class="btn-remove">Remove</button></td>
+				<td><button class="btn-remove" onclick="removeItem()">Remove</button></td>
 			</tr>
 			<tr>
 				<th colspan="5" id="product-end">
-				<button class="btn-danger">CHECKOUT</button>
-				<button class="btn-ok">CLEAR CART</button>
+				<button class="btn-ok" onclick="checkOut()">CHECKOUT</button>
+				<button class="btn-danger"  onclick="removeAll()">CLEAR CART</button>
 				</th>
 			</tr>
 		</table>
