--- a/attendant/index.html
+++ b/attendant/index.html
@@ -11,7 +11,7 @@
 <!--image product-->
 <div class="container container-img">
 	<div class="product-image center">
-		<span class="fa fa-times-rectangle" onclick="showBody()"> close</span><br>
+		<span class="fa fa-times-rectangle" onclick="showBody()"></span><br>
 		<img src="../images/product-image/omo.jpeg" alt="product image">
 	</div>
 </div>
