:bug: [Chore #161153411] Change , to | in login

--- a/attendant.html
+++ b/attendant.html
@@ -11,7 +11,7 @@
 <div class="login-box">
 	<div class="center">
 		<img src="images/profile.png" alt="Profile">
-		<h1><a href="index.html">Administrator</a> ,
+		<h1><a href="index.html">Administrator</a> |
 		 <a href="attendant.html" id="active-links">Store attendant</a> </h1>
 		<form action="attendant/index.html">
 			<input type="email" placeholder="Enter Your Email">
