--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="login-box">
 	<div class="center">
 		<img src="images/profile.png" alt="Profile">
-		<h1><a href="index.html" id="active-links">Administrator</a> ,
+		<h1><a href="index.html" id="active-links">Administrator</a> |
 		 <a href="attendant.html">Store attendant</a> </h1>
 		<form action="admin/index.html">
 			<input type="email" placeholder="Enter Your Email">
