:bug: [Chore #161153411] Add a back button and a logout link

--- a/admin/index.html
+++ b/admin/index.html
@@ -19,6 +19,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -61,7 +62,7 @@
 					<button class="btn-category" onclick="showSales()">Sales Record</button>
 				</td>
 				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Record</button>
+					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
 					<button class="btn-remove">Delete Record</button>
@@ -80,7 +81,7 @@
 					<button class="btn-category" onclick="showSales()">Sales Record</button>
 				</td>
 				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Record</button>
+					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
 					<button class="btn-remove">Delete Record</button>
@@ -98,7 +99,7 @@
 					<button class="btn-category" onclick="showSales()">Sales Record</button>
 				</td>
 				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Record</button>
+					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
 					<button class="btn-remove">Delete Record</button>
@@ -116,7 +117,7 @@
 					<button class="btn-category" onclick="showSales()">Sales Record</button>
 				</td>
 				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Record</button>
+					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
 					<button class="btn-remove">Delete Record</button>
