--- a/admin/new-attendant.html
+++ b/admin/new-attendant.html
@@ -18,6 +18,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -29,18 +30,24 @@
 
 	<div class="attendant-form">
 		<form>
+			<label>First Name</label><br>
 			<input type="text" name="" placeholder="First Name"><br>
-			<input type="text" name="" placeholder="Last Name">
+			<label>Last Name</label><br>
+			<input type="text" name="" placeholder="Last Name"><br>
+			<label>Email</label><br>
 			<input type="text" name="" placeholder="Email"><br>
+			<label>Telophone</label><br>
 			<input type="text" name="" placeholder="Telephone"><br>
+			<label>Department</label><br>
 			<select>
 				<option>List of Department</option>
 				<option>List of Department</option>
 				<option>List of Department</option>
 			</select><br>
+			<label>Gender</label><br>
 			<select>
-				<option>Gender : male</option>
-				<option>Gender : female</option>
+				<option>Male</option>
+				<option>Female</option>
 			</select><br><br>
 			<button type="submit" class="btn-main">Add Store Attendant</button>
 		</form>
