--- a/admin/sales-record.html
+++ b/admin/sales-record.html
@@ -18,10 +18,16 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
 <!--end of navigation-->
+<!--my info title-->
+<div class="container center margin-top-20">
+	<a href="index.html" class="btn-main">Back</a>
+</div>
+<!--end of my info title-->
 
 <!--list of products-->
 <div class="container">
