--- a/admin/category.html
+++ b/admin/category.html
@@ -18,6 +18,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html"  class="active-nav">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
