--- a/admin/edit-product.html
+++ b/admin/edit-product.html
@@ -19,6 +19,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html"   class="active-nav">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
