--- a/admin/editrecord.html
+++ b/admin/editrecord.html
@@ -18,6 +18,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -26,6 +27,7 @@
 <!--my info title-->
 <div class="container center">
 	<h1>Edit [Joh Doe]</h1>
+	<a href="index.html" class="btn-main">Back</a>
 </div>
 <!--end of my info title-->
 
