--- a/admin/new-product.html
+++ b/admin/new-product.html
@@ -18,6 +18,7 @@
 			<li><a href="new-product.html"  class="active-nav">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -29,10 +30,15 @@
 
 	<div class="attendant-form">
 		<form>
+			<label>Product Name</label></br>
 			<input type="text" name="" placeholder="Product Name"><br>
-			<input type="text" name="" placeholder="Inventory Quantity">
+			<label>Inventory Ouantity</label></br>
+			<input type="text" name="" placeholder="Inventory Quantity"><br>
+			<label>Minimum Inventory Quantity</label></br>
 			<input type="text" name="" placeholder="Minimum Inventory Quantity"><br>
+			<label>Item Price</label></br>
 			<input type="text" name="" placeholder="Item Price"><br>
+			<label>Category</label></br>
 			<select>
 				<option>List of category</option>
 				<option>List of category</option>
