--- a/admin/products.html
+++ b/admin/products.html
@@ -18,6 +18,7 @@
 			<li><a href="new-product.html"   class="active-nav">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
