--- a/attendant/index.html
+++ b/attendant/index.html
@@ -28,6 +28,7 @@
 				<li><a href="cart.html">Shopping Cart</a></li>
 				<li><a href="profile.html">profile</a></li>
 				<li><a href="myinfo.html">My Info</a></li>
+				<li><a href="../index.html">Logout</a></li>
 			</ul>
 		</div>
 	</div>
