--- a/attendant/myinfo.html
+++ b/attendant/myinfo.html
@@ -17,6 +17,7 @@
 			<li><a href="cart.html">Shopping Cart</a></li>
 			<li><a href="profile.html">Profile</a></li>
 			<li><a href="myinfo.html" class="active-nav">My info</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
