--- a/attendant/profile.html
+++ b/attendant/profile.html
@@ -17,6 +17,7 @@
 			<li><a href="cart.html">Shopping Cart</a></li>
 			<li><a href="profile.html" class="active-nav">Profile</a></li>
 			<li><a href="myinfo.html">My Info</a></li>
+			<li><a href="../index.html">Logout</a></li>
 		</ul>
 	</div>
 </div>
