--- a/admin/index.html
+++ b/admin/index.html
@@ -65,7 +65,7 @@
 					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete Record</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
 				</td>
 			</tr>
 
@@ -84,7 +84,7 @@
 					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete Record</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
 				</td>
 			</tr>
 
@@ -102,7 +102,7 @@
 					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete Record</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
 				</td>
 			</tr>
 
@@ -120,7 +120,7 @@
 					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete Record</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
 				</td>
 			</tr>
 		</table>
