:bug: [Chore #161153411] Add an alert to delete buttons

--- a/admin/edit-product.html
+++ b/admin/edit-product.html
@@ -61,7 +61,7 @@
 					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
 				</td>
 			</tr>
 
@@ -76,7 +76,7 @@
 					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
 				</td>
 			</tr>
 
@@ -91,7 +91,7 @@
 					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
 				</td>
 			</tr>
 
@@ -106,7 +106,7 @@
 					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
 				</td>
 			</tr>
 
@@ -121,7 +121,7 @@
 					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
 				</td>
 			</tr>
 
@@ -136,7 +136,7 @@
 					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
 				</td>
 				<td>
-					<button class="btn-remove">Delete</button>
+					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
 				</td>
 			</tr>
 			
