--- a/activate.html
+++ b/activate.html
@@ -13,12 +13,15 @@
 		<img src="images/profile.png" alt="Profile">
 		<h1>LOGIN</h1>
 		<p id="error"></p>
+			<input type="text" placeholder="Enter Your first name" id="first-name">
+			<input type="text" placeholder="Enter Your last name" id="last-name">
 			<input type="email" placeholder="Enter Your Email" id="email">
-			<input type="password" placeholder="Enter Your Password" id="password"><br>
-			<button class="btn-main" type="submit" id="submit-login">SIGN IN</button>
+			<input type="password" placeholder="Enter Your Password" id="password">
+			<input type="text" placeholder="Enter the activation key" id="key"><br>
+			<button class="btn-main" type="submit" id="submit-login">ACTIVATE</button>
 	</div>
 </div>
 <!--end of Login Box-->
-<script src="js/fetch/login.js"></script>
+<script src="js/fetch/activate.js"></script>
 </body>
 </html>
