--- a/admin/edit-product.html
+++ b/admin/edit-product.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<script src="../js/admin-redirect.js"></script>
+	<script src="../js/fetch/logout.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -19,7 +20,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html"   class="active-nav">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
-			<li><a href="../index.html">Logout</a></li>
+			<li><a href="../index.html"  onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -36,113 +37,10 @@
 <!--list of products-->
 <div class="container">
 	<div class="table-product margin-top-20">
-		<table>
-			<tr>
-				<th colspan="9" id="product-title">Store Attendants details</th>
-			</tr>
-			<tr id="hover-body">
-				<th>ID</th>
-				<th>Product Name</th>
-				<th>Inventory Quantity</th>
-				<th>M.I.Q</th>
-				<th>Category</th>
-				<th>Item Price</th>
-				<th></th>
-				<th></th>
-			</tr>
-			<tr>
-				<td>122</td>
-				<td>omo</td>
-				<td>5000</td>
-				<td>5000</td>
-				<td>Soaps</td>
-				<td>100 ksh</td>
-				<td>
-					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>122</td>
-				<td>omo</td>
-				<td>5000</td>
-				<td>5000</td>
-				<td>Soaps</td>
-				<td>100 ksh</td>
-				<td>
-					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>122</td>
-				<td>omo</td>
-				<td>5000</td>
-				<td>5000</td>
-				<td>Soaps</td>
-				<td>100 ksh</td>
-				<td>
-					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>122</td>
-				<td>omo</td>
-				<td>5000</td>
-				<td>5000</td>
-				<td>Soaps</td>
-				<td>100 ksh</td>
-				<td>
-					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>122</td>
-				<td>omo</td>
-				<td>5000</td>
-				<td>5000</td>
-				<td>Soaps</td>
-				<td>100 ksh</td>
-				<td>
-					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>122</td>
-				<td>omo</td>
-				<td>5000</td>
-				<td>5000</td>
-				<td>Soaps</td>
-				<td>100 ksh</td>
-				<td>
-					<button class="btn-edit" onclick="showEditProduct()">Edit</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete</button>
-				</td>
-			</tr>
-			
-		</table>
+		
 	</div>
 </div>
 <!--end of list of products-->
+<script src="../js/fetch/get-product.js"></script>
 </body>
 </html>
