--- a/admin/editproduct.html
+++ b/admin/editproduct.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
+	<script src="../js/fetch/logout.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -18,7 +19,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html"  class="active-nav">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
-			<li><a href="../index.html">Logout</a></li>
+			<li><a href="../index.html"  onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -33,41 +34,53 @@
 
 <!--my info-->
 <div class="container center margin-top-40">
+<p id="error"></p>
+<p id="success"></p><br>
 	<div class="row">
 		<div class="sales-box edit-info">
 			<h1>Product Name</h1>
-			<h2>Omo</h2>
-			<input type="text" value="omo">
+			<h2 id="oldName"></h2>
+			<input type="text" id="newName">
 		</div>
 		<div class="sales-box edit-info">
 			<h1>Inventory Quantity</h1>
-			<h2>50000</h2>
-			<input type="text" value="5000">
+			<h2 id="oldQuantity"></h2>
+			<input type="number" id="newQuantity" value="0">
 		</div>
 		<div class="sales-box edit-info">
 			<h1>M.I.Q</h1>
-			<h2>6500</h2>
-			<input type="text" value="6500">
+			<h2 id="oldMiq"></h2>
+			<input type="number" id="newMiq" value="0">
 		</div>
 	</div>
 
 	<div class="row margin-top-40">
 		<div class="sales-box edit-info">
-			<h1>Category</h1>
-			<h2>Store Attendant</h2>
-			<select>
-				<option>Category 1</option>
-				<option>Category 2</option>
-				<option>Category 3</option>
-			</select>
+			<h1>Category Id</h1>
+			<h2 id="oldCategory"></h2>
+			<div id="categoryName"></div>
 		</div>
 		<div class="sales-box edit-info">
 			<h1>Item Price</h1>
-			<h2>100</h2>
-			<input type="text" value="100">
+			<h2 id="oldPrice"></h2>
+			<input type="number" id="newPrice" value="0">
 		</div>
+		<div class="sales-box edit-info"> 
+			<h1>Item Price</h1>
+			<h2 id="oldUom"></h2>
+			<select id="newUom">
+				<option>litre</option>
+				<option>kilogram</option>
+				<option>packet</option>
+				<option>gram</option>
+			</select>
+		</div>
+	</div>
+	<div class="row margin-top-40">
+		<button class="btn-main">UPDATE</button>
 	</div>
 </div>
 <!--end of my info-->
+<script src="../js/fetch/edit-product.js"></script>
 </body>
 </html>
