--- a/admin/editrole.html
+++ b/admin/editrole.html
@@ -14,34 +14,40 @@
 		<ul>
 			<li id="logo"><span class="fa fa-money"></span> 
 			<span class="logo-text">STORE</span> MANAGER</li>
-			<li><a href="index.html">Edit Store attendant</a></li>
+			<li><a href="index.html"  class="active-nav">Edit Store attendant</a></li>
 			<li><a href="new-attendant.html">Add Store attendant</a></li>
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
-			<li><a href="category.html"  class="active-nav">Category</a></li>
+			<li><a href="category.html">Category</a></li>
 			<li><a href="../index.html"  onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
 <!--end of navigation-->
 
-<!--category-->
-<div class="container">
-	<div class="table-product margin-top-20">
-		<div id="category-lists">
-			
+<!--my info title-->
+<div class="container center">
+	<h1 id="user-name">Edit [Joh Doe]</h1>
+	<a href="index.html" class="btn-main">Back</a>
+</div>
+<!--end of my info title-->
+
+<!--my info-->
+<div class="container center margin-top-40">
+	<div class="row">
+	<h2 id="role-result"></h2><br>
+		<div class="sales-box edit-info">
+			<h1>Role</h1>
+			<h2>Store Attendant</h2>
+			<select id="role">
+				<option>admin</option>
+				<option>attendant</option>
+			</select>
+			<button class="btn-main">Update</button>
 		</div>
 	</div>
 </div>
-
-<div class="container center">
-	<h1>Add category</h1>
-	<div id="error"></div><br>
-	<div id="category-result"></div>
-	<input type="text" id="category" placeholder="Add category"><br><br>
-	<button class="btn-main">ADD</button>
-</div>
-<!--end of  category-->
-<script src="../js/fetch/get-category.js"></script>
+<!--end of my info-->
+<script src="../js/fetch/edit-role.js"></script>
 </body>
 </html>
