--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<script src="../js/admin-redirect.js"></script>
+	<script src="../js/fetch/logout.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -19,7 +20,7 @@
 			<li><a href="new-product.html">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
-			<li><a href="../index.html">Logout</a></li>
+			<li><a href="../index.html" onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -36,96 +37,12 @@
 <!--list of products-->
 <div class="container">
 	<div class="table-product margin-top-20">
-		<table>
-			<tr>
-				<th colspan="9" id="product-title">Store Attendants details</th>
-			</tr>
-			<tr id="hover-body">
-				<th>ID</th>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Email</th>
-				<th>Telephone Number</th>
-				<th>Department</th>
-				<th></th>
-				<th></th>
-				<th></th>
-			</tr>
-			<tr>
-				<td>123</td>
-				<td>John</td>
-				<td>Doe</td>
-				<td>John@gmail.com</td>
-				<td>071589650</td>
-				<td>electronics</td>
-				<td>
-					<button class="btn-category" onclick="showSales()">Sales Record</button>
-				</td>
-				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
-				</td>
-			</tr>
-
-
-			<tr>
-				<td>123</td>
-				<td>John</td>
-				<td>Doe</td>
-				<td>John@gmail.com</td>
-				<td>071589650</td>
-				<td>electronics</td>
-				<td>
-					<button class="btn-category" onclick="showSales()">Sales Record</button>
-				</td>
-				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>123</td>
-				<td>John</td>
-				<td>Doe</td>
-				<td>John@gmail.com</td>
-				<td>071589650</td>
-				<td>electronics</td>
-				<td>
-					<button class="btn-category" onclick="showSales()">Sales Record</button>
-				</td>
-				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
-				</td>
-			</tr>
-
-			<tr>
-				<td>123</td>
-				<td>John</td>
-				<td>Doe</td>
-				<td>John@gmail.com</td>
-				<td>071589650</td>
-				<td>electronics</td>
-				<td>
-					<button class="btn-category" onclick="showSales()">Sales Record</button>
-				</td>
-				<td>
-					<button class="btn-edit" onclick="showEditSales()">Edit Store Attendant</button>
-				</td>
-				<td>
-					<button class="btn-remove" onclick="alert('item deleted')">Delete Record</button>
-				</td>
-			</tr>
-		</table>
+	<div id="attendants">
+		
+	</div>
 	</div>
 </div>
 <!--end of list of products-->
+<script src="../js/fetch/get-attendants.js"></script>
 </body>
 </html>
