--- a/admin/new-product.html
+++ b/admin/new-product.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
+	<script src="../js/fetch/logout.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -18,7 +19,7 @@
 			<li><a href="new-product.html"  class="active-nav">Add Products</a></li>
 			<li><a href="edit-product.html">Edit Product</a></li>
 			<li><a href="category.html">Category</a></li>
-			<li><a href="../index.html">Logout</a></li>
+			<li><a href="../index.html"  onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
@@ -27,28 +28,30 @@
 <!--new title-->
 <div class="container center">
 	<h1>Add Products</h1>
-
 	<div class="attendant-form">
-		<form>
 			<label>Product Name</label></br>
-			<input type="text" name="" placeholder="Product Name"><br>
+			<input type="text" id="name" placeholder="Product Name"><br>
 			<label>Inventory Ouantity</label></br>
-			<input type="text" name="" placeholder="Inventory Quantity"><br>
+			<input type="number" id="inventoryQuantity" placeholder="Inventory Quantity"><br>
 			<label>Minimum Inventory Quantity</label></br>
-			<input type="text" name="" placeholder="Minimum Inventory Quantity"><br>
+			<input type="number" id="MIQ" placeholder="Minimum Inventory Quantity"><br>
 			<label>Item Price</label></br>
-			<input type="text" name="" placeholder="Item Price"><br>
-			<label>Category</label></br>
-			<select>
-				<option>List of category</option>
-				<option>List of category</option>
-				<option>List of category</option>
-			</select><br><br>
+			<input type="number" id="price" placeholder="Item Price"><br>
+			<label>unit of measurement</label></br>
+			<select id="uom">
+				<option>litre</option>
+				<option>kilogram</option>
+				<option>packet</option>
+				<option>gram</option>
+			</select><br>
+			<label>Category ID</label></br>
+			<div id="categoryName"></div>
+			<p id="error"></p>
+			<p id="success"></p><br>
 			<button type="submit" class="btn-main">Add Products</button>
-		</form>
 	</div>
 </div>
 <!--new title-->
-
+<script src="../js/fetch/post-product.js"></script>
 </body>
 </html>
