--- a/attendant/confirm.html
+++ b/attendant/confirm.html
@@ -17,7 +17,7 @@
 			<li><a href="cart.html"  class="active-nav">Shopping Cart</a></li>
 			<li><a href="profile.html">Profile</a></li>
 			<li><a href="myinfo.html">My Info</a></li>
-			<li><a href="../index.html">Logout</a></li>
+			<li><a href="../index.html"  onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
