--- a/attendant/myinfo.html
+++ b/attendant/myinfo.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
+	<script src="../js/fetch/logout.js"></script>
 </head>
 <body class="white-bg">
 <!--navigation-->
@@ -17,7 +18,7 @@
 			<li><a href="cart.html">Shopping Cart</a></li>
 			<li><a href="profile.html">Profile</a></li>
 			<li><a href="myinfo.html" class="active-nav">My info</a></li>
-			<li><a href="../index.html">Logout</a></li>
+			<li><a href="../index.html"  onclick="logout()">Logout</a></li>
 		</ul>
 	</div>
 </div>
