--- a/attendant/productimage.html
+++ b/attendant/productimage.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/favicon.ico">
+	<script src="../js/fetch/logout.js"></script>
 </head>
 <body class="white-bg">
 
